force-app/main/default/objects/Booking__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>End Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>