force-app/main/default/objects/Booking__c/fields/PlanningEvent__c.field-meta.xml
<CustomField>
    <fullName>PlanningEvent__c</fullName>
    <label>Planning Event</label>
    <referenceTo>PlanningEvent__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>