force-app/main/default/objects/Booking__c/validationRules/EndAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndAfterStart</fullName>
    <active>true</active>
    <description>Empêche une fin de réservation avant le début.</description>
    <errorConditionFormula>EndDateTime__c &lt;= StartDateTime__c</errorConditionFormula>
    <errorDisplayField>EndDateTime__c</errorDisplayField>
    <errorMessage>End Date Time must be greater than Start Date Time.</errorMessage>
</ValidationRule>